added a combobox to the recognised default widgets and bug fixed the _build_widget(self) def

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -176,6 +176,7 @@
     "                'FloatText':widgets.FloatText,\n",
     "                'FloatSlider':widgets.FloatSlider,\n",
     "                'Dropdown':widgets.Dropdown,\n",
+    "                'Combobox':widgets.Combobox,\n",
     "                'SelectMultiple':widgets.SelectMultiple,\n",
     "                'Checkbox':widgets.Checkbox,\n",
     "                'Text':widgets.Text,\n",
@@ -252,12 +253,17 @@
     "    \n",
     "    def _build_widget(self):\n",
     "        \n",
-    "        if str(type(self.widget_lkup[self.widget_name]))==\"<class 'method'>\":\n",
-    "            # then it is a developer defined custom widget that requires a class method to define\n",
-    "            self.widget_lkup[self.widget_name]()\n",
+    "        if self.widget_name in list(self.widget_lkup.keys()):\n",
+    "            if str(type(self.widget_lkup[self.widget_name]))==\"<class 'method'>\":\n",
+    "                # then it is a developer defined custom widget that requires a class method to define\n",
+    "                self.widget_lkup[self.widget_name]()\n",
+    "\n",
+    "            else:\n",
+    "                # it is a vanilla widget \n",
+    "                self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
     "        else:\n",
-    "            # it is a vanilla widget \n",
-    "            self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
+    "            # it is a user defined widget\n",
+    "            self.widget_only = self.widget_name(**self.kwargs)\n",
     "\n",
     "        self.widget_simple = widgets.HBox([self.widget_only,_markdown(self.di['label'])],layout=self.MF_FORM_ITEM_LAYOUT)\n",
     "        self.widget_row = widgets.HBox([_markdown(self.di['name']),self.widget_simple],layout=self.MF_FORM_ITEM_LAYOUT1)\n",
@@ -494,63 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b229c99b5347e4bd8c82c524181e64",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(HBox(children=(HTML(value='<p>name</p>'), HBox(children=(ToggleButton(value=False, icon='arrow-…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b8fd14f5ba0b496c870ffa4fe07b559a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "di = {'name':'name','value':pd.DataFrame.from_dict({'a':['b','c'],'b':['c','d']}).to_json(),'widget':'ipyagrid'}\n",
-    "#class(EditDict)\n",
-    "EditDict(di)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "lines_to_next_cell": 0
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'FileConfigController' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-fad1b0a7bb21>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    174\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    175\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 176\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mEditJson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mEditListOfDicts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mFileConfigController\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    177\u001b[0m     \"\"\"\n\u001b[0;32m    178\u001b[0m     \u001b[0minherits\u001b[0m \u001b[0mEditListOfDicts\u001b[0m \u001b[0muser\u001b[0m \u001b[0minput\u001b[0m \u001b[0mform\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mwell\u001b[0m \u001b[0mFileConfigController\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'FileConfigController' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class EditListOfDicts():\n",
     "    \"\"\"\n",
@@ -943,7 +897,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d44404d59d44499798e627f2bde10f83",
+       "model_id": "0d5bf1c6a0154344a7c4a3d7cb1f37d3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -957,7 +911,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1498df1264ff4fc09e850cefbd468e4c",
+       "model_id": "8dbad69010c3400f969f112c77cd7165",
        "version_major": 2,
        "version_minor": 0
       },
@@ -971,7 +925,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "799d3fd05df246bfa00ed9dffac3fed8",
+       "model_id": "fdaa1dca131147439ac76a838fd05e23",
        "version_major": 2,
        "version_minor": 0
       },
@@ -985,7 +939,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25609bae624d4f59a1d2657bb57cab58",
+       "model_id": "c76edf2352f74283998aa843780c10a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -999,7 +953,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "637350ceb2fa48d8b1f4b0ca38f1ed5e",
+       "model_id": "c9a4dbd883e74ba5801d27080f76dd01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1013,7 +967,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "56b4682df6c947c7874679ca33887410",
+       "model_id": "61661a8daf594a39977442d12c585d52",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1027,7 +981,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64d57f7b3522480d839bb762a451f59a",
+       "model_id": "06d6829fa5cf475092be76fdea267fed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1041,7 +995,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "098ac325b11a4904b5678d1fa4854981",
+       "model_id": "a3bd02e1c50c41f4bee2d50020380f9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1101,7 +1055,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "957758d608804b138f2333e5a80fef46",
+       "model_id": "f94ea25b1c334c07affc84479d04cd58",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1115,7 +1069,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d1e55fd0bcba460687fcb56dc8d5fbac",
+       "model_id": "196d776e54bc4a6b9d4e74e357c5233e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1129,7 +1083,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c06f5f7507f4854b82fda3d5787fa43",
+       "model_id": "8a585eb1cac34526aee1fb8241ee160b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1143,7 +1097,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76b982ad9f534916837fffffd4ae6394",
+       "model_id": "96a18875369a435da08f6fdc098e6387",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1157,7 +1111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5046304557f647719f8a29adebbfa120",
+       "model_id": "e69914731e6a438da0238620bade3fd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1171,7 +1125,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "100115c968494fca8d0b2773f6d19bef",
+       "model_id": "2bab6c00bea741f3bd861a6fbf631583",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1185,7 +1139,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5e8190c841f4472c9247430a7f87edd9",
+       "model_id": "4cb8689dca2d44cc931cb0b711619fda",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1199,7 +1153,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14b722a0942d49f185f3e3548d2d76b1",
+       "model_id": "b0c8b34021fc4f6ea3f20ee4c4008d39",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1213,7 +1167,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a61d82499e8a473f87ef5fcc7281d0e3",
+       "model_id": "0c403ff0eb334ea493f07e1027484cfe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1227,7 +1181,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5911449187104ded90be727698fc94f3",
+       "model_id": "5176f6a479734fd890e0c9eb7c2d5795",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1241,7 +1195,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e5abdbac66894ee0932905f528c0a8cb",
+       "model_id": "d329622fd703407485f43ac8b506773c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1301,7 +1255,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "952bafaed1d34be2b6ca5748d7ddf33c",
+       "model_id": "e0c9cec001f54766aa5822a06c1585ee",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1315,7 +1269,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c313106a33494f6eaa25be21ebece502",
+       "model_id": "49a56cb1d7264487b7fac2419775fbf6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1329,7 +1283,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09a16fdd50954bc8b3d6aca66115fcad",
+       "model_id": "5a1c9f5ea7e5412a9bce2e5db6f9ca4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1389,7 +1343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "410c67e586e340d5a24bc26c31a2b31b",
+       "model_id": "b34d7d5d644d4c0fad7c1455638dae49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1403,7 +1357,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9ea33d5cf8e40daa780cc64bdbb7746",
+       "model_id": "d61ca0fc40b249a0b5bbf53ac2e8ff9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1417,7 +1371,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6788551dcb14c788c41ee292de9aa45",
+       "model_id": "0ef96c70cc4f4dd5bfe24d78eea5e555",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1489,7 +1443,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "523dc516bfd640318b448373c4e14ec3",
+       "model_id": "7f7de42c5bb244328211fae4cdbea79b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1503,7 +1457,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf437154e59a47c4b18183c24f8324b1",
+       "model_id": "20920d0530284cd0b45695d553d97a0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1517,7 +1471,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c68743962434e19bdf9cb372e2f1d22",
+       "model_id": "0e1bcf6af68744a499b3a11b6782e5f8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1531,7 +1485,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f82760f5297f4cf9b863dd7f640e37f4",
+       "model_id": "7dda4405b0cf4aaea3a7fb412662d310",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1545,7 +1499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5581f2649a984e1e839e4f7a231fb2d2",
+       "model_id": "0a3aa443d0db4f59a3bd504314a56c4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1559,7 +1513,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "593eb00ddab243f7898bd51f1e3123ca",
+       "model_id": "53de19344cfd4eea98074e47780534b6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1573,7 +1527,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3db0c24468f45688dfd59bd6d2e8f6c",
+       "model_id": "274c86e37ea4439bb98a5831a7742ee2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1587,7 +1541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fb130fb1dc094399af9085995d8d0cf6",
+       "model_id": "e72978884d5c44c08b55e36a6bf0a9e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1601,7 +1555,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b4b9023aa26e4062b2609769d5122db4",
+       "model_id": "8b8ceaca640646ab8c1f62cf811c15ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1615,7 +1569,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97e495331cc945b398e2858b79cf7fa1",
+       "model_id": "8ccf57c26e1340bba3c320911db47333",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1629,7 +1583,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "836519ae8ce8415386362a61244ae3b0",
+       "model_id": "4591416e72bc43bfaddba670d3d1b1d6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1643,7 +1597,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a7ad2a0a2e645a1a4dfbd6cb296df76",
+       "model_id": "d70c598b94504218be0964b2b532490c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1657,7 +1611,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "301cdaff6f76463f827306edce9f1238",
+       "model_id": "dbcd9f23cd5243b49d4113708e2084fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1671,7 +1625,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f47f0389c88d4ee7be6252b3f2fe6bd8",
+       "model_id": "e25f9c8a1e724c73abb5516cadb1c51d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1731,7 +1685,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b48fb7f2bfb84e36a8c443a0521c3f54",
+       "model_id": "35c1711d25ad47a3ba458e7ebb5b8892",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1745,7 +1699,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11e40a9772664c7782a60fa30e4559ca",
+       "model_id": "064af410babc4400b6a0f38a40a74bb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1759,7 +1713,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c08d1f3be954a8fb696256123319a95",
+       "model_id": "8ddc18e3e4044d5284a373aba8365f60",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1819,7 +1773,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "063fe74597434894b693587166e33747",
+       "model_id": "772a14408ca44aa4a1e3e8d1d6088354",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1833,7 +1787,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51c3f7c34fe34a83ba1da9712b006a1b",
+       "model_id": "a2f5380920134fa2a71365b6cfc319b5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1893,7 +1847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "39579196ac914937a8e800b9d1fdc013",
+       "model_id": "a1f7b7102b7341eeaff10e6a93748e84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1907,7 +1861,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4020fa231b1f443dbf26ab6a2342254b",
+       "model_id": "0e419492d2e24bbd99a9e27f7fcc5715",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1921,7 +1875,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a21207637b9846f599764d192c9ce2e3",
+       "model_id": "219a48cdd1a643789bbfbead16af98de",
        "version_major": 2,
        "version_minor": 0
       },
