Added raw data files

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -226,6 +226,7 @@
     "    def __init__(self, di):\n",
     "        self.out = widgets.Output()\n",
     "        self.di = di\n",
+    "        self.nested_g = None\n",
     "        self.form()\n",
     " \n",
     "    def form(self):\n",
@@ -995,6 +996,18 @@
    "display_name": "Python [conda env:mf_main] *",
    "language": "python",
    "name": "conda-env-mf_main-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
