--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -55,8 +55,26 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RunApp' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-561d3d443f63>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    308\u001b[0m \u001b[1;31m# ARCHIVED\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    309\u001b[0m \u001b[1;31m###################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 310\u001b[1;33m \u001b[1;32mclass\u001b[0m \u001b[0mRunAppComparison\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRunApp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    311\u001b[0m     \u001b[1;31m# In order to pick which models to compare,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    312\u001b[0m     \u001b[1;31m# the reporting function needs a custom function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'RunApp' is not defined"
+     ]
+    }
+   ],
    "source": [
     "###################\n",
     "# ARCHIVED\n",
@@ -670,6 +688,10 @@
     "            if len(fpths)==0:\n",
     "                display(Markdown('select the file(s) that you would like to display from the \"outputs\" list above '))\n",
     "            else:\n",
+    "                for f in fpths:\n",
+    "                    if not os.path.isfile(f):\n",
+    "                        print(f)\n",
+    "                        fpths.remove(f)\n",
     "                display(DisplayFiles(fpths, fpths_ignore=display_ignore, fpth_prefix=display_prefix))\n",
     "                \n",
     "    def _show_log(self, sender):\n",
@@ -1131,6 +1153,7 @@
     "        filename = self.comp_out_dd.value\n",
     "        data_out = []\n",
     "        legend_names = []\n",
+    "        print(self.dataset_raw)\n",
     "        for data_raw in self.dataset_raw:\n",
     "            fpth = os.path.join(self.fdir_data,\"{0}__{1}\".format(data_raw[0],filename))\n",
     "            graph = pio.read_json(fpth)['data']\n",
@@ -1263,6 +1286,47 @@
     "    # the reporting function needs a custom function \n",
     "    # to add the graph names to a dropdown \n",
     "    \n",
+    "    def _update_comp(self, comp_runs):\n",
+    "\n",
+    "\n",
+    "        '''colors = [\"DodgerBlue\",\n",
+    "                  \"MediumSeaGreen\",\n",
+    "                  \"Peru\",\n",
+    "                  \"LightGray\",\n",
+    "                  \"Turquoise\",\n",
+    "                  \"darksalmon\",\n",
+    "                  \"goldenrod\"]\n",
+    "        self.exttemp_colour = \"Crimson\"\n",
+    "        color_index = 0\n",
+    "        self.dataset_raw = []\n",
+    "        for i in comp_runs:\n",
+    "            self.dataset_raw.append((i,i,colors[color_index]))\n",
+    "            color_index += 1\n",
+    "            if color_index > len(colors):\n",
+    "                color_index = 0'''\n",
+    "    \n",
+    "        basenames = []\n",
+    "\n",
+    "        for file in os.listdir(self.config[\"compare_run_graphs\"]):\n",
+    "            if file.endswith(\".plotly\"):\n",
+    "                basenames.append(''.join(file.split('__')[1:]))\n",
+    "\n",
+    "        basenames = list(set(basenames))\n",
+    "        files_tocompare = []\n",
+    "\n",
+    "        for basename in basenames:\n",
+    "            to_compare = True\n",
+    "\n",
+    "            for name in comp_runs:\n",
+    "                fpth = os.path.join(self.config[\"compare_run_graphs\"],\"{0}__{1}\".format(name,basename))\n",
+    "                if not os.path.exists(fpth):\n",
+    "                    to_compare = False\n",
+    "\n",
+    "            if to_compare:\n",
+    "                files_tocompare.append(basename)\n",
+    "                \n",
+    "        return files_tocompare\n",
+    "        \n",
     "    def _report_chooser_onchange(self, change):\n",
     "        if change['type'] != 'change' or change['name'] != 'value':\n",
     "            return\n",
@@ -1275,6 +1339,27 @@
     "                    widget.widget_only.disabled = value\n",
     "                    widget.widget_only.value = False\n",
     "\n",
+    "    def _update_comp_onchange(self, change):\n",
+    "        if change['type'] != 'change' or change['name'] != 'value':\n",
+    "            return\n",
+    "        tmp = []\n",
+    "        for nested_w in self.editjson.widgets:\n",
+    "            if nested_w.nested_g and not nested_w.widget_only.disabled:\n",
+    "                for widget in nested_w.nested_g.widgets:\n",
+    "                    widget.widget_only.observe(self._update_comp_onchange)\n",
+    "                    tmp.append(widget.widget_only.value)\n",
+    "                    \n",
+    "        comp_graphs = self._update_comp(tmp)\n",
+    "        for widget in self.editjson.widgets:\n",
+    "            if \"tag\" in widget.di:\n",
+    "                if widget.di[\"tag\"] == \"comparison-graphs\":\n",
+    "                    for value in widget.di[\"value\"]:\n",
+    "                        if value not in comp_graphs:\n",
+    "                            widget.di[\"value\"].remove(value)\n",
+    "                            widget.widget_only.value.remove(value)\n",
+    "                    widget.di[\"options\"] = comp_graphs\n",
+    "                    widget.widget_only.options = comp_graphs\n",
+    "        return\n",
     "            \n",
     "    def _edit_inputs(self, sender):\n",
     "        \n",
@@ -1307,6 +1392,7 @@
     "\n",
     "        for widget in self.editjson.widgets:\n",
     "            if \"tag\" in widget.di:\n",
+    "                widget.widget_only.observe(self._update_comp_onchange)\n",
     "                if widget.di[\"tag\"] == \"report-type\":\n",
     "                    widget.widget_only.observe(self._report_chooser_onchange)\n",
     "                    \n",
@@ -1319,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1351,7 +1437,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "379f9fbe67904ad3b887e691fd0c6f67",
+       "model_id": "241c7b0d1efa42ae859becb390b29dca",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1365,7 +1451,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5f62b4c5a6974a459664f679828d3be2",
+       "model_id": "b7cd35984f634f26a7535b6bc73b6d1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1412,7 +1498,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c458775198945019a6a818c112f8a90",
+       "model_id": "6f7be4314a9b46059b8299f680e27714",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1426,7 +1512,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d44259a8280f438aa7a4e7d7eb5cd473",
+       "model_id": "ae3ffb5890754759b517cca1c5ce9428",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1516,7 +1602,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2e2aca3015b848ff83969ff919d6c31d",
+       "model_id": "68196541628a4063bd742548ac9c5657",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1530,7 +1616,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "114c1b91856c4536994b63615ca27001",
+       "model_id": "8fb5b775c7514b808b05a4b0dc6a66a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1544,7 +1630,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ac3b06f3bec4a028976264c236207f7",
+       "model_id": "b9033fb4c03043c79bb8d910d672661c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1558,7 +1644,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3119f04f7d7747d1aee9eee302c0d1f4",
+       "model_id": "1b6cd3d4b165469db749a519c96a7fc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1572,7 +1658,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42bf2991d3364b17bd8e38b4aa026d4e",
+       "model_id": "52c40c93cc2745b1b5375f90686f10c1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1586,7 +1672,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d419ad193c134450a4e16409e7e0eb0a",
+       "model_id": "e6d4fc2c0e7247a8a0bcf5cdaddd8e61",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1600,7 +1686,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dbe3ee72a9742028d2f28712b75a24a",
+       "model_id": "67cd857323a34f8988874fcd05bde49d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1614,7 +1700,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25668986b12141008fbd8f13376af940",
+       "model_id": "4842ffa092e641a489e47ae9ee158694",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1703,7 +1789,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5c7a2a9a85734633ac84b5b1232c8f42",
+       "model_id": "b7a38cac52dd43eca856ab7de1eb29f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1717,7 +1803,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff214cf09b7a4561922ac11943d0133d",
+       "model_id": "f77142e776464772ac60fa0f0dc2a25c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1731,7 +1817,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba98a17fc71d466a9ee71fa26572ac75",
+       "model_id": "64a7072654804468a4e68b47279d5ce5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1745,7 +1831,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f34d3e6c691e46ac99fb888ae3ebd378",
+       "model_id": "c01b99a548504d4587aa6026550beaaa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1759,7 +1845,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2267e94e13b44fe29acb0e2cc11bab1d",
+       "model_id": "0fd300a876504192a6e428cb372d5144",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1773,7 +1859,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d3b2e0ba8494935a1a09ee891ffe49f",
+       "model_id": "6a1c2c8eb9754c96801367a0348993e5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1787,7 +1873,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0aad8c176dca47e48173196f388a6138",
+       "model_id": "1a88d2ba59774cceb897aa28d3dd50b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1801,7 +1887,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "465376d8403e4eb9b0fb6469ce0261e5",
+       "model_id": "61e8d20463cf4015a3a40c08726db8ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1885,7 +1971,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1149f45e97a54229ac2a95c62886520d",
+       "model_id": "b0c214831bec44d49f7b375f64acfb24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1899,7 +1985,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e1992e45a164a5f82f4fb6831091470",
+       "model_id": "a39b6e7f1697495098b71333a9a529b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1913,7 +1999,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdffc88a411e42ef87637ad1f2e23403",
+       "model_id": "b1b982dd31214ba2895dbb01fbd1c878",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1963,7 +2049,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a675007250d846ba800ed032873c5a95",
+       "model_id": "9a12537908bf45cd8dc3efa89c2f04d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1977,7 +2063,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b043f1aa80c43c29ca7409a02d7e0eb",
+       "model_id": "368643c4f2804efbb36a6dadc9a4479a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2245,7 +2331,7 @@
     "        'fpth_parameters': parameters,\n",
     "        'fdir_compinputs': runapps,\n",
     "        #'compare_run_inputs': compare_config['fpth_inputs'],\n",
-    "        #'compare_run_graphs': compare_config['script_outputs']['0']['fdir']\n",
+    "        'compare_run_graphs': parameters['fdir_graphs_interim']\n",
     "    }\n",
     "    report_run = RunAppReport(reporting_config)  \n",
     "    \n",
@@ -2259,7 +2345,7 @@
     "    display(Markdown('---'))\n",
     "    display(Markdown('## Report Runs'))\n",
     "    display(Markdown('''Create a report'''))\n",
-    "    display(report_run)\n"
+    "    display(report_run)"
    ]
   },
   {
